added styling to ads

--- a/E-commerce/store/templates/store/inc/slider.html
+++ b/E-commerce/store/templates/store/inc/slider.html
@@ -52,7 +52,7 @@
 <div class="container-fluid ">
   <div class="row">
 <div class="col-lg-2 mx-auto">
-  <div class="float-left d-inline">
+  <div class="float-left d-inline position-fixed">
     <a href="//www.comebackalive.in.ua/donate2?utm_source=Blockthrough&amp;utm_medium=EU&amp;utm_campaign=ComeBackAlive" target="_blank""><img src="/static/images/ad.png"></a>
 </div>
 </div>
@@ -98,7 +98,7 @@
  </div>
 </div>
 <div class="col-lg-2 mx-auto">
-  <div class="float-left d-inline">
+  <div class="float-left d-inline position-fixed">
     <a href="//www.comebackalive.in.ua/donate2?utm_source=Blockthrough&amp;utm_medium=EU&amp;utm_campaign=ComeBackAlive" target="_blank"><img src="/static/images/ad.png"></a>
 </div>
 </div>
