--- a/E-commerce/store/templates/store/profile.html
+++ b/E-commerce/store/templates/store/profile.html
@@ -78,7 +78,9 @@
                             </div>
                             <button type="submit" class="btn btn-success btn-block form-control mt-2">Save</button>
                         </div>
-                        
+                        <div class="text-center mt-4">
+                            <p><a href="{%url 'password_change'%}">Change Password</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
