--- a/E-commerce/store/templates/store/inc/slider.html
+++ b/E-commerce/store/templates/store/inc/slider.html
@@ -29,15 +29,15 @@
       }
       a{text-decoration :none;}
       .product-viewtag{
-        background-color=red;
+        background-color:red;
         color:#fff;
-        font-siz:11px;
+        font-size:11px;
         line-height:1;
         position:absolute;
         text-align:center;
         text-transform:uppercase;
         top:22px;
-        magin-left:17.5rem;
+        margin-left:17.5rem;
         padding: 7px 10px;
         font-weight:600;
         min-width:45px;
@@ -51,8 +51,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <div class="container-fluid ">
   <div class="row">
-<div class="col-lg-2 mx-auto">
-  <div class="float-left d-inline position-fixed">
+<div class="col-lg-2 d-flex justify-content-center">
+  <div class="float-left d-inline ">
     <a href="//www.comebackalive.in.ua/donate2?utm_source=Blockthrough&amp;utm_medium=EU&amp;utm_campaign=ComeBackAlive" target="_blank""><img src="/static/images/ad.png"></a>
 </div>
 </div>
@@ -64,19 +64,19 @@
      <div class="carousel-inner">
          <div class="carousel-item active">
              <img class="d-block w-100 d-inline-block"
-                  height = "450px"
+                  height = "600px"
                   src="{% static 'images/c-d-x-PDX_a_82obo-unsplash.jpg' %}"
                   alt="First slide">
          </div>
          <div class="carousel-item ">
              <img class="d-block w-100 d-inline-block"
-                  height = "450px"
+                  height = "600px"
                   src="{% static 'images/pexels-alex-andrews-821651.jpg' %}"
                   alt="Second slide">
          </div>
          <div class="carousel-item ">
              <img class="d-block w-100 d-inline-block"
-                  height = "450px"
+                  height = "600px"
                   src="{% static 'images/pexels-gabriel-freytez-341523.jpg' %}"
                   alt="Third slide">
          </div>
@@ -97,8 +97,8 @@
      </a>
  </div>
 </div>
-<div class="col-lg-2 mx-auto">
-  <div class="float-left d-inline position-fixed">
+<div class="col-lg-2 d-flex justify-content-center">
+  <div class="float-left d-inline ">
     <a href="//www.comebackalive.in.ua/donate2?utm_source=Blockthrough&amp;utm_medium=EU&amp;utm_campaign=ComeBackAlive" target="_blank"><img src="/static/images/ad.png"></a>
 </div>
 </div>
