--- a/E-commerce/store/templates/store/index.html
+++ b/E-commerce/store/templates/store/index.html
@@ -1,4 +1,6 @@
-{% extends 'store/layouts/main.html' %} {% block content %}
+{% extends 'store/layouts/main.html' %} 
+
+{% block content %}
 
 {% include 'store/inc/slider.html' %}
 
