--- a/E-commerce/store/templates/store/profile.html
+++ b/E-commerce/store/templates/store/profile.html
@@ -20,7 +20,7 @@
                                 <div class="col-md-6">
                                     <label for="">First Name</label>
                                     <input type="text"
-                                           required
+                                          
                                            class="form-control"
                                            value="{{ userprofile.first_name }}"
                                            name="fname"
@@ -29,7 +29,7 @@
                                 <div class="col-md-6">
                                     <label for="">Last Name</label>
                                     <input type="text"
-                                           required
+                                          
                                            class="form-control"
                                            value="{{ userprofile.last_name }}"
                                            name="lname"
@@ -38,7 +38,7 @@
                                 <div class="col-md-6 mt-2">
                                     <label for="">Email</label>
                                     <input type="email"
-                                           required
+                                          required
                                            class="form-control"
                                            value="{{ request.user.email }}"
                                            name="email"
@@ -47,7 +47,7 @@
                                 <div class="col-md-6 mt-2">
                                     <label for="">Phone</label>
                                     <input type="text"
-                                           required
+                                          
                                            class="form-control"
                                            value="{{ userprofile.phone }}"
                                            name="phone"
@@ -55,12 +55,12 @@
                                 </div>
                                 <div class="col-md-12 mt-2">
                                     <label for="">Address</label>
-                                    <textarea class="form-control" required name="address" placeholder="Enter your Address"> {{ userprofile.address }} </textarea>
+                                    <textarea class="form-control" name="address" placeholder="Enter your Address"> {{ userprofile.address }} </textarea>
                                 </div>
                                 <div class="col-md-6 mt-2">
                                     <label for="">City</label>
                                     <input type="text"
-                                           required
+                                          
                                            class="form-control"
                                            value="{{ userprofile.city }}"
                                            name="city"
@@ -69,7 +69,7 @@
                                 <div class="col-md-6 mt-2">
                                     <label for="">State</label>
                                     <input type="text"
-                                           required
+                                          
                                            class="form-control"
                                            value="{{ userprofile.state }}"
                                            name="state"
@@ -78,7 +78,7 @@
                                 <div class="col-md-6 mt-2">
                                     <label for="">Country</label>
                                     <input type="text"
-                                           required
+                                          
                                            class="form-control"
                                            value="{{ userprofile.country }}"
                                            name="country"
@@ -87,7 +87,7 @@
                                 <div class="col-md-6 mt-2">
                                     <label for="">Pin Code</label>
                                     <input type="text"
-                                           required
+                                          
                                            class="form-control"
                                            value="{{ userprofile.pincode }}"
                                            name="pincode"
