--- a/E-commerce/store/templates/store/orders/view.html
+++ b/E-commerce/store/templates/store/orders/view.html
@@ -51,7 +51,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for item in orders %}
+                                        {% for item in orderitems %}
                                             <tr>
                                                 <td>{{item.product.name}}</td>
                                                 <td>{{item.quantity}}</td>
@@ -59,9 +59,6 @@
                                                 <td>
                                                     {{item.status}}
                                                     <img src="{{item.product.product_image.url}}" height="50px" width="50px" alt="Product Image">
-                                                </td>
-                                                <td>
-                                                    <a href="{% url 'overview' item.tracking_no %}" class = "btn btn-primary">view</a>
                                                 </td>
                                             </tr>
                                         {% endfor %}
