--- a/E-commerce/store/templates/store/auth/Password_form.html
+++ b/E-commerce/store/templates/store/auth/Password_form.html
@@ -13,6 +13,8 @@
               crossorigin="anonymous">
         <link rel="stylesheet"
               href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+              <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+              <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
               <style>.error{color:red;}</style>
     </head>
     <body>
@@ -68,6 +70,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
         <script src = "/static/js/passwordValidation.js"></script>
     </body>
 </html>
