--- a/E-commerce/store/templates/store/inc/slider.html
+++ b/E-commerce/store/templates/store/inc/slider.html
@@ -1,58 +1,8 @@
 {% load static %}
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width= , initial-scale=1.0" />
-    <title>
-        {% block title %}
-        {% endblock title %}
-    </title>
-    <!-- Bootstrap CSS -->
-    {% comment %} flat-icons {% endcomment %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    {% comment %} bootstrap {% endcomment %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"rel="stylesheet">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
-
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
-    <style>
-      *{
-        font-family: 'Roboto', sans-serif;
-      }
-      a{text-decoration :none;}
-      .product-viewtag{
-        background-color:red;
-        color:#fff;
-        font-size:11px;
-        line-height:1;
-        position:absolute;
-        text-align:center;
-        text-transform:uppercase;
-        top:22px;
-        margin-left:17.5rem;
-        padding: 7px 10px;
-        font-weight:600;
-        min-width:45px;
-      }
-      .active{
-         font-weight:800;
-      }
-    </style>
-    
-</head>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <div class="container-fluid ">
   <div class="row">
-<div class="col-lg-2 d-flex justify-content-center">
-  <div class="float-left d-inline ">
+<div class="col-lg-2" style=" display: flex; justify-content: center;"   >
+  <div class="float-left d-inline">
     <a href="//www.comebackalive.in.ua/donate2?utm_source=Blockthrough&amp;utm_medium=EU&amp;utm_campaign=ComeBackAlive" target="_blank""><img src="/static/images/ad.png"></a>
 </div>
 </div>
@@ -80,29 +30,35 @@
                   src="{% static 'images/pexels-gabriel-freytez-341523.jpg' %}"
                   alt="Third slide">
          </div>
+         <div class="carousel-item ">
+          <img class="d-block w-100 d-inline-block"
+               height = "600px"
+               src="{% static 'images/pexels-eprism-studio-335257.jpg' %}"
+               alt="Third slide">
+          </div>
+          <div class="carousel-item ">
+            <img class="d-block w-100 d-inline-block"
+                 height = "600px"
+                 src="{% static 'images/pexels-karolina-grabowska-4202924.jpg' %}"
+                 alt="Third slide">
+          </div>
      </div>
-     <a class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="prev">
-         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-         <span class="visually-hidden">Previous</span>
-     </a>
-     <a class="carousel-control-next"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="next">
-         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-         <span class="visually-hidden">Next</span>
-     </a>
+     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+
  </div>
 </div>
-<div class="col-lg-2 d-flex justify-content-center">
-  <div class="float-left d-inline ">
+<div class="col-lg-2 " >
+  <div class="float-left d-inline " >
     <a href="//www.comebackalive.in.ua/donate2?utm_source=Blockthrough&amp;utm_medium=EU&amp;utm_campaign=ComeBackAlive" target="_blank"><img src="/static/images/ad.png"></a>
 </div>
 </div>
 
   </div>
 </div>
-
