Fixed with Tarik: size of divs of products

--- a/E-commerce/store/templates/store/collections.html
+++ b/E-commerce/store/templates/store/collections.html
@@ -17,7 +17,7 @@
                 <hr>
                 <div class= "row">
                     {% for item in category %}
-                        <div class= "col-md-3">
+                        <div class= "col-md-3 mb-3">
                             <div class= "card" style="height: 23rem;" >
                                 <a href="{% url 'collectionsview' item.slug %}">
                                     <div class= "card-body">
