--- a/E-commerce/store/templates/store/layouts/main.html
+++ b/E-commerce/store/templates/store/layouts/main.html
@@ -30,15 +30,15 @@
           }
           a{text-decoration :none;}
           .product-viewtag{
-            background-color=red;
+            background-color:red;
             color:#fff;
-            font-siz:11px;
+            font-size:11px;
             line-height:1;
             position:absolute;
             text-align:center;
             text-transform:uppercase;
             top:22px;
-            magin-left:17.5rem;
+            margin-left:17.5rem;
             padding: 7px 10px;
             font-weight:600;
             min-width:45px;
