--- a/E-commerce/store/templates/store/products/index.html
+++ b/E-commerce/store/templates/store/products/index.html
@@ -34,11 +34,11 @@
                 <div class="row">
                     {% for item in products %}
                     <div class="col-md-3">
-                        <div class="card">
+                        <div class="card" style="height: 26rem;">
                             <a href="{% url 'productview' item.category.slug item.slug %}">
-                                <div class="card-body">
+                                <div class="card-body" >
                                     <div class="category-image">
-                                        <img src="{{ item.product_image.url }}" alt="Product image" class="w-100" />
+                                        <img src="{{ item.product_image.url }}" alt="Product image" width="100%" height="300">
                                     </div>
                                     <h4 class="text-center">{{ item.name }}</h4>
                                     <span class="float-start"> <s>{{ item.original_price | stringformat:'d' }} EGP</s></span>
