--- a/E-commerce/store/templates/store/auth/Password_form.html
+++ b/E-commerce/store/templates/store/auth/Password_form.html
@@ -33,17 +33,19 @@
                                     <div class="form-outline mb-4">
                                         <label for="">Password</label>
                                         <input type="password"
-                                               class="form-control passwordField"
+                                               class="form-control"
                                                placeholder="Enter Password"
                                                name="passfield1"
+                                               id="passwordField"
                                                required>
                                     </div>
                                     <div class="form-outline mb-4">
                                         <label for="">Confirm Password</label>
                                         <input type="password"
-                                               class="form-control ConfirmPasswordField"
+                                               class="form-control "
                                                placeholder="Confirm Password"
                                                name="passfield2"
+                                               id="ConfirmPasswordField"
                                                required>
                                     </div>
                                     <div class="form-outline mb-4" hidden>
@@ -58,7 +60,7 @@
                                                class="form-control uidb64"
                                                disabled value = "{{uidb64}}">
                                     </div>
-                                    <button type="submit" class="btn btn-success btn-block form-control">Submit</button>
+                                    <a href="/"><button type="submit" class="btn btn-success btn-block form-control">Submit</button></a>
                                 </form>
                             </div>
                         </div>
@@ -72,5 +74,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
         <script src = "/static/js/passwordValidation.js"></script>
+        <script>
+            alertify.set('notifier','position', 'top-right');
+        </script>
     </body>
 </html>
