--- a/E-commerce/store/templates/store/index.html
+++ b/E-commerce/store/templates/store/index.html
@@ -11,7 +11,7 @@
             <hr>
             <div class= "row">
             {% for item in category_product %}
-                <div class= "product_data item col-md-6 col-lg-4 col-xl-3">
+                <div class= "product_data item col-md-6 col-lg-4 col-xl-3 mb-3">
                     <div class= "card">
                         <div class= "card-body">
                             <a href="{% url 'productview' item.0.slug item.1.slug %}">
