--- a/E-commerce/store/templates/store/auth/register.html
+++ b/E-commerce/store/templates/store/auth/register.html
@@ -50,7 +50,7 @@
                                 </div>
                                 <button type="submit" class="btn btn-success btn-block form-control">Register</button>
                                 <div class="text-center mt-4">
-                                    <p><a href="{%url 'loginpage'%}">Login</a></p>
+                                    <p>Already a member? <a href="{%url 'loginpage'%}"> Login</a></p>
                                 </div>
                             </form>
                         </div>
