--- a/E-commerce/store/templates/store/collections.html
+++ b/E-commerce/store/templates/store/collections.html
@@ -62,7 +62,7 @@
 <script>
 var xValues = {{categorynames|safe}};
 var yValues = {{numberofproductsincat|safe}};
-var barColors = ["red", "green","blue","orange","brown"];
+var barColors = ["red", "green","blue","orange","brown","purple","black"];
 
 new Chart("myChart", {
   type: "doughnut",
